# AtosPraksa

./: .gitignore  MihaelSpanovic_Zadatci_RazvojniInzenjer.docx  README.md  employees.txt  users.txt
CMakePriprema/: Notes.txt
CMakePriprema/zadatak2/src/: Professor.cpp  Student.cpp  main.cpp
CMakePriprema/zadatak3/include/Professor/: Professor.h
CMakePriprema/zadatak3/src/: Professor.cpp  Student.cpp  main.cpp
CMakePriprema/zadatak4/: CMakeLists.txt
CMakePriprema/zadatak5/: CMakeLists.txt
CMakePriprema/zadatak5/include/Professor/: Professor.h
CMakePriprema/zadatak5/include/Student/: Student.h
CMakePriprema/zadatak5/src/: Professor.cpp  Student.cpp  main.cpp
CMakePriprema/zadatak6/: CMakeLists.txt
CMakePriprema/zadatak6/include/Student/: Student.h
CMakePriprema/zadatak6/src/: main.cpp
CMakePriprema/zadatak7/: CMakeLists.txt
CMakePriprema/zadatak7/Professor/: CMakeLists.txt
CMakePriprema/zadatak7/Student/: CMakeLists.txt
CMakePriprema/zadatak7/src/: main.cpp
JavaPriprema/zadatak03/: HelloWorld.java
JavaPriprema/zadatak04/: EvenOrOdd.java
JavaPriprema/zadatak11/: LanguageSelector.java
JavaPriprema/zadatak12/: Lorem.txt
JavaPriprema/zadatak13/: Language.java  ProgrammingLanguage.java
JavaPriprema/zadatak14/: FunctionInterface.java  Integration.java  Main.java
JavaPriprema/zadatak15/: Employee.java  EmployeeManagment.java  Login.java  Main.java  ReportMenu.java  TaskManagment.java  Tasks.java
Sudoku/: FutureNotes.txt  SudokuBoard.java  TestJNIPrimitiveArray.c  TestJNIPrimitiveArray.h  TestJNIPrimitiveArray.java
zadatak03/: HelloWorld.java
zadatak04/: EvenOrOdd.java
zadatak05/: Counter.java
zadatak06/: TablicaMnozenja.java
zadatak07/: DivBy6.java
zadatak08/: Calendar.java
zadatak09/: Graphing.java
zadatak10/: StringSearch.java
zadatak11/: LanguageSelector.java
zadatak11v2/: TCPClient.java  TCPServer.java
zadatak12/: WordCounter.java
zadatak13/: Language.java  ProgrammingLanguage.java
zadatak14/: FunctionInterface.java  Integration.java  Main.java
zadatak15/: EmployManagementSystem.java  Employee.java  EmployeeManagement.java  EmployeeManagment.java  TaskManagment.java  User.java  Zadaci.java  Zaposlenik.java
